[package]
name = "orbtktest"
version = "0.1.0"
authors = ["shenhunluo <a1045572818@hotmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
orbtk = { git = "https://gitlab.redox-os.org/redox-os/orbtk.git" }
actix-web = "*"

[lib]
proc-macro = true